# Proc.-Imagenes

./: README.md
FaceID/FaceID_Android/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
FaceID/FaceID_Android/app/: build.gradle.kts
FaceID/FaceID_Android/app/src/main/: AndroidManifest.xml
FaceID/FaceID_Android/app/src/main/cpp/: CMakeLists.txt  FaceDetector.h  FaceRecognizer.h  MyPCA.h  ReadFile.h  WriteTrainData.h  native-lib.cpp
FaceID/FaceID_Android/app/src/main/java/com/johan/faceidpca/: MainActivity.kt
FaceID/FaceID_Android/app/src/main/res/layout/: activity_main.xml
FaceID/FaceID_Android/app/src/main/res/values/: strings.xml  themes.xml
Taller_Filtros/: main.cpp
Users/Johan/Documents/J. Trabajos - Universidad/Procesamineto de Imagenes/Taller_Filtros/: CMakeLists.txt
include/: frame_diff.h
src/: main_frame_diff.cpp
taller_segmentacion/: CMakeLists.txt
taller_segmentacion/include/: gmm_segmenter.h
taller_segmentacion/src/: frame_diff.cpp  gmm_segmenter.cpp  main_gmm.cpp
